###########################################################
#
# CMakeLists: Libraries
#
###########################################################

cmake_minimum_required(VERSION 3.28)

# Define the Libraries Root:
set(LibrariesRoot ${CMAKE_CURRENT_LIST_DIR})

###########################################################
#
# Sub projects:
#
###########################################################

#add_subdirectory("DiceRollerLib")